--- a/sourcemod/configs/tf2jail/weaponblocker.cfg
+++ b/sourcemod/configs/tf2jail/weaponblocker.cfg
@@ -1,13 +1,60 @@
 "TF2JailRedux_WeaponBlocker"
 {
-	// These REQUIRE indexes found in https://wiki.alliedmods.net/Team_Fortress_2_Item_Definition_Indexes
-	"Red Team"
+	// Number on the right: Item definition index of what you want to block.
+	// https://wiki.alliedmods.net/Team_Fortress_2_Item_Definition_Indexes
+
+	// Number on the left: Doesn't matter what you put there, it's there for sanity.
+
+	// To block a weapon for both teams, you must put it under both teams shown below!
+	// "All" adds the indexes to each of the gamemodes. So the weapon(s) are completely blocked.
+
+	// Example setup:
+//	"Normal"
+//	{
+//		"Red"
+//		{
+//			"0"		"46"		// Bonk! Atomic Punch
+//			"1" 	"1145"		// Festive Bonk
+//		}
+//		"Blue"
+//		{
+//			"0" 	"237"		// Rocket Jumper
+//		}
+//	}
+	"Normal"
 	{
-		"0"	""
+		"Red"
+		{
+		}
+		"Blue"
+		{
+		}
 	}
-	// Unfortunately, if you need to block weapons for both teams, you have to place it under both. Them's the rules.
-	"Blue Team"
+	"Freeday"
 	{
-		"0" ""
+		"Red"
+		{
+		}
+		"Blue"
+		{
+		}
+	}
+	"Warday"
+	{
+		"Red"
+		{
+		}
+		"Blue"
+		{
+		}
+	}
+	"All"
+	{
+		"Red"
+		{
+		}
+		"Blue"
+		{
+		}
 	}
 }
